--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="vad-web-0.0.13/ort.js"></script>
   <script src="vad-web-0.0.13/bundle.min.js"></script>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="index.js"></script>
 </head>
 
 <body>
