Update about page

--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
   <dialog id="info-dialog" class="info-dialog">
     <div class="dialog-content">
       <h2>About This Project</h2>
+      <p>This project is an offline-first voice-enabled chatbot that uses the following technologies:</p>
+      <ul>
+        <li>Voice Activity Detection (VAD)</li>
+        <li>Speech-to-Text (STT)</li>
+        <li>Text-to-Speech (TTS)</li>
+        <li>OpenAI compatible LLM API (local or remote)</li>
+      </ul>
+      <p><strong>All of the above (except the LLM) are running entirely in the browser, completely offline.</strong></p>
+      <p>This project is intended to act as a testbed and launching pad for voice-enabled applications.</p>
+      <p>This project is built on top of the following libraries:</p>
       <div class="info-section">
         <h3>Voice Activity Detection</h3>
         <p>VAD is provided by the <a href="https://github.com/ricky0123/vad" target="_blank">vad-web library</a>.</p>
